tests/snapshots/integration__integration_tests__switch__ping_pong_2_feature_a_to_main.snap
---
source: tests/integration_tests/switch.rs
info:
  program: wt
  args:
    - switch
    - main
  env:
    APPDATA: "[TEST_CONFIG_HOME]"
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    GIT_TERMINAL_PROMPT: "0"
    HOME: "[TEST_HOME]"
    LANG: C
    LC_ALL: C
    PATH: "[PATH]"
    RUST_LOG: warn
    SOURCE_DATE_EPOCH: "1735776000"
    USERPROFILE: "[TEST_HOME]"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
    XDG_CONFIG_HOME: "[TEST_CONFIG_HOME]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
<<<<<<< HEAD
[33m▲[39m [33mWorktree for [1mmain[22m @ [REPO], but cannot change directory — shell integration not installed[39m
[2m↳[22m [2mRun [90mwt config shell install[39m to enable automatic cd[22m
||||||| 930c5842
🟡 [33mWorktree for [1mmain[22m @ [1m[REPO][22m, but cannot change directory — shell integration not installed[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
=======
🟡 [33mWorktree for [1mmain[22m @ [1m_REPO_[22m, but cannot change directory — shell integration not installed[39m
💡 [2mRun [90mwt config shell install[39m to enable automatic cd[22m
>>>>>>> origin/main
